# Kern

./: .gitignore  .gitmodules  .justfile  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  sdkconfig.defaults  sdkconfig.defaults.crowpanel  sdkconfig.defaults.crowpanel_101  sdkconfig.defaults.wave_35  sdkconfig.defaults.wave_43  sdkconfig.defaults.wave_4b  sdkconfig.defaults.wave_5
.github/workflows/: github-actions-test.yml  test-all-builds.yml  test-each-commit.yml
components/bbqr/src/: base32.c  base32.h  bbqr.c  bbqr.h
components/bbqr/test/: test_base32.c  test_bbqr.c
components/bsp_common/: CMakeLists.txt
components/crowpanel/: CMakeLists.txt  crowpanel.c  idf_component.yml  pmic.c
components/crowpanel/include/bsp/: crowpanel.h  display.h  esp-bsp.h
components/crowpanel_101/: CMakeLists.txt  crowpanel_101.c  idf_component.yml  pmic.c
components/crowpanel_101/include/bsp/: crowpanel_101.h  esp-bsp.h
components/libwally-core/: CMakeLists.txt
components/sd_card/: Kconfig
components/sd_card/include/: sd_card.h
components/sd_card/src/: sd_card.c
components/video/: CMakeLists.txt  video.c  video.h
components/wave_35/: idf_component.yml
components/wave_43/: CMakeLists.txt  idf_component.yml  wave_43.c
components/wave_43/include/bsp/: display.h  esp-bsp.h  esp32_p4_wifi6_touch_lcd_43.h
components/wave_4b/: idf_component.yml  wave_4b.c
components/wave_5/: idf_component.yml  wave_5.c
docs/: design-guidelines.md  secure-boot.md  security-plan.md
enclosures/crowpanel_10_1/: 10_1_case-Case.3mf  10_1_case-front_frame.3mf  README.md
enclosures/waveshare_4_3/: Button.FCStd  KernWaveshare4.3.3mf  KernWaveshare4.3.FCStd  KernWaveshare4.3AlanKeyVariant.FCStd  README.md
flasher/: index.html
kern_secure_boot/: README.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/core/: bip322.c  bip322.h  bip32_path.c  bip32_path.h  descriptor_checksum.c  descriptor_checksum.h  descriptor_validator.c  descriptor_validator.h  kef.c  kef.h  key.c  key.h  miniscript_policy.c  miniscript_policy.h  psbt.c  psbt.h  psbt_internal.h  registry.c  registry.h  script_templates.c  script_templates.h  settings.c  settings.h  ss_whitelist.c  ss_whitelist.h  storage.c  storage.h  wallet.c  wallet.h
main/core/test/: .gitignore  Makefile  test_bip322.c  test_derivation_path.c  test_miniscript_policy.c  test_psbt_classify.c  test_purpose_binding.c  test_registry_match.c  test_registry_parse.c  test_ss_whitelist_is_whitelisted.c  test_ss_whitelist_parse.c  test_ss_whitelist_regen.c
main/core/test/stubs/: esp_err.h  esp_log.h  key_stub.c  registry_stub.c  wallet_stub.c
main/pages/: capture_entropy.c  load_descriptor_storage.c  passphrase.c  screensaver.c  store_descriptor.c  store_descriptor.h  store_mnemonic.c
main/pages/dev_tools/: decode_snapshots.c  dev_menu.c  snapshot.c
main/pages/home/: addresses.c  advanced_tools.c  advanced_tools.h  bip85.c  bip85.h  home.c  public_key.c
main/pages/home/backup/: backup_menu.c  mnemonic_qr.c  mnemonic_words.c
main/pages/load/: load.c
main/pages/load_mnemonic/: load_menu.c  load_storage.c  manual_input.c  manual_input.h
main/pages/login/: about.c  login.c  login_settings.c
main/pages/new_mnemonic/: dice_rolls.c  entropy_from_camera.c  new_mnemonic_menu.c
main/pages/pin/: pin_page.c  pin_settings.c
main/pages/scan/: psbt_sign_policy.c  psbt_sign_policy.h  scan.c
main/pages/settings/: descriptor_manager.c  registered_descriptors.c  registered_descriptors.h  wallet_settings.c
main/pages/shared/: address_checker.c  descriptor_loader.c  descriptor_loader.h  kef_decrypt_page.c  kef_encrypt_page.c  key_confirmation.c  mnemonic_editor.c  sd_file_browser.c  sd_file_browser.h  storage_browser.c  wipe_flash_dialog.c
main/qr/: encoder.c  encoder.h  parser.c  parser.h  scanner.c  scanner.h  viewer.c
main/ui/: battery.c  dialog.c  dialog.h  font_policy.c  font_policy.def  font_policy.h  input_helpers.c  input_helpers.h  key_info.c  key_info.h  keyboard.c  menu.c  menu.h  numeric_keypad.c  numeric_keypad.h  power.c  power.h  sankey.c  sankey.h  settings_row.c  settings_row.h  swipe_back.c  swipe_back.h  text_fit.c  text_fit.h  theme.c  theme.h  theme_palette.h  theme_widgets.c  theme_widgets.h  wallet_source_picker.c  wallet_source_picker.h
main/ui/assets/: icons.h  icons_16.c  icons_16.h  icons_22.c  icons_22.h  icons_24.c  icons_24.h  icons_28.c  icons_28.h  icons_30.c  icons_30.h  icons_32.c  icons_32.h  icons_34.c  icons_34.h  icons_36.c  icons_36.h  icons_40.c  icons_40.h  icons_fonts.h  kern_logo_lvgl.c  kern_logo_lvgl.h
main/utils/: session.c  session.h
scripts/: bake_icons.sh  format.sh  release.sh
simulator/: CMakeLists.txt  README.md  lv_conf.h
simulator/data/: README.md
simulator/platform/: README.md
simulator/platform/bsp_sim/: bsp_sim.c
simulator/platform/esp_idf_stubs/: freertos_sim.c  nvs_sim.c  sim_flash.c  sim_storage_hooks.c  storage_sim.c  stubs.c
simulator/platform/esp_idf_stubs/include/: esp_err.h  esp_partition.h  nvs.h  sim_flash.h  sim_storage_hooks.h
simulator/platform/esp_idf_stubs/include/freertos/: task.h
simulator/platform/sd_card_sim/: sd_card_sim.c
simulator/platform/sd_card_sim/include/: sd_card.h  sim_sdcard.h
simulator/platform/video_sim/: video_sim.c
simulator/platform/video_sim/include/: sim_video.h
simulator/src/: main_sim.c
simulator/tests/: storage_smoke.c
tools/: bake_icons.py  derive_font_sizes.py  ui_font_policy.py
tools/fonts/: README.md
